Updates to file SCSS structure and compilation
- Rearranged SCSS structure to allow for future theming

--- a/src/assets/scss/themes/helenliu-2018/components/_content-panel.scss
+++ b/src/assets/scss/themes/helenliu-2018/components/_content-panel.scss
@@ -1,11 +1,14 @@
 // ====================================================================
 // 
-//	THEME - HELENLIU-2018
-//	_helenliu-2018.scss
-//	Author:	Helen Liu
+//	CONTENT PANEL
+//	Content sections for blog pages.
+//
+//	FIle name:	_content-panel.scss
+//	Author:			Helen Liu
+//	Version 		1.0
 // 
 // ====================================================================
 
-@import 'core/all';
+.content--panel {
 
-@import 'components/layout';
+}
