--- a/src/assets/scss/themes/helenliu-2018/components/_header-global.scss
+++ b/src/assets/scss/themes/helenliu-2018/components/_header-global.scss
@@ -1,15 +1,14 @@
 // ====================================================================
 // 
-//	LAYOUT
-//	_layout.scss
-//	Author:	Helen Liu
+//	HEADER GLOBAL
+//	Global header.
+//
+//	FIle name:	_header-global.scss
+//	Author:			Helen Liu
+//	Version 		1.0
 // 
 // ====================================================================
 
-.header-global {
-
-}
-
-.content-panel {
+.header--global {
 
 }
