--- a/src/assets/scss/themes/helenliu-2018/components/_layout.scss
+++ b/src/assets/scss/themes/helenliu-2018/components/_layout.scss
@@ -1,12 +1,8 @@
 // ====================================================================
 // 
-//	HEADER PANEL
-//	Panel containing utilities - predominantly for desktop layouts.
-//	_header-panel.scss
+//	LAYOUT
+//	_layout.scss
 //	Author:	Helen Liu
 // 
 // ====================================================================
 
-.header-panel {
-
-}
