--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-@import 'settings';
+// @import 'settings'; // In app-helenliu-2018
 @import 'foundation';
 @import 'motion-ui';
 
@@ -52,4 +52,5 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-@import 'helenliu-2018';
+// THEME
+// @import 'helenliu-2018';
