--- a/src/assets/scss/themes/helenliu-2018/core/_variables-global.scss
+++ b/src/assets/scss/themes/helenliu-2018/core/_variables-global.scss
@@ -12,3 +12,15 @@
 // --------------------------------------------------------------------
 
 $border-default: 1px solid smart-scale($light-grey, 10%);
+
+
+// --------------------------------------------------------------------
+//	SPACINGS
+// --------------------------------------------------------------------
+
+$space-xs: 	rem-calc(4);
+$space-s:		rem-calc(8);
+$space-m:		rem-calc(16);
+$space-l:		rem-calc(24);
+$space-xl:	rem-calc(48);
+$space-xxl:	rem-calc(72);
