--- a/src/assets/scss/themes/helenliu-2018/_settings.scss
+++ b/src/assets/scss/themes/helenliu-2018/_settings.scss
@@ -83,14 +83,14 @@ $black: $black;
 $white: $white;
 $body-background: $light-grey;
 $body-font-color: $dark-grey;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: $sans-serif-typeface-1;
 $body-antialiased: true;
-$global-margin: 1rem;
-$global-padding: 1rem;
+$global-margin: $space-m;
+$global-padding: $space-m;
 $global-position: 1rem;
-$global-weight-normal: normal;
-$global-weight-bold: bold;
-$global-radius: rem-calc(6);
+$global-weight-normal: $regular;
+$global-weight-bold: $bold;
+$global-radius: rem-calc(4);
 $global-menu-padding: 0.7rem 1rem;
 $global-menu-nested-margin: 1rem;
 $global-text-direction: ltr;
@@ -121,8 +121,8 @@ $breakpoint-classes: (small medium large xlarge xxlarge);
 $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: (
-  small: 30px,
-  medium: 30px,
+  small: rem-calc(30),
+  medium:  rem-calc(30),
 );
 $grid-column-align-edge: true;
 $grid-column-alias: 'columns';
@@ -131,10 +131,10 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: $body-font-family;
-$header-font-weight: $global-weight-normal;
+$header-font-family: ; // Specified in theme as it varies
+$header-font-weight: ; // Specified in theme as it varies
 $header-font-style: normal;
-$font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
+$font-family-monospace: $fixed-typeface-1;
 $header-color: inherit;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
