--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,4 +1,4 @@
-{{!-- This layout is used for the home page only --}}
+{{!-- This is the base layout for your project, and will be used on every page. --}}
 
 <!doctype html>
 <html class="no-js" lang="en">
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" href="{{root}}assets/css/app-helenliu-2018.css">
   </head>
   <body>
