New images and styles

--- a/src/assets/scss/app-helenliu-2018.scss
+++ b/src/assets/scss/app-helenliu-2018.scss
@@ -13,6 +13,16 @@
 
 // helenliu-2018 theme
 @import 'themes/helenliu-2018/core/all';
+@import 'themes/helenliu-2018/components/buttons';
+@import 'themes/helenliu-2018/components/block';
+@import 'themes/helenliu-2018/components/layout';
+@import 'themes/helenliu-2018/components/links';
+@import 'themes/helenliu-2018/components/blade-panel';
+@import 'themes/helenliu-2018/components/tags';
+@import 'themes/helenliu-2018/components/feature-panel';
+@import 'themes/helenliu-2018/components/featurettes-panel';
+@import 'themes/helenliu-2018/components/footer-global';
 @import 'themes/helenliu-2018/components/header-global';
 @import 'themes/helenliu-2018/components/header-panel';
 @import 'themes/helenliu-2018/components/content-panel';
+@import 'themes/helenliu-2018/components/parallax';
