--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -9,11 +9,13 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{root}}assets/css/app-helenliu-2018.css">
   </head>
-  <body>
+  <body class="template--home">
 
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
+    <!-- {{> header-global}} -->
     {{> body}}
 
     <script src="{{root}}assets/js/app.js"></script>
+    <script src="{{root}}assets/js/fontawesome-all.js"></script>
   </body>
 </html>
