--- a/src/assets/scss/themes/helenliu-2018/_settings.scss
+++ b/src/assets/scss/themes/helenliu-2018/_settings.scss
@@ -81,9 +81,9 @@ $medium-gray: $medium-grey;
 $dark-gray: $dark-grey;
 $black: $black;
 $white: $white;
-$body-background: smart-scale($light-grey, -90%);
-$body-font-color: $dark-grey;
-$body-font-family: $sans-serif-typeface-1;
+$body-background: smart-scale($medium-grey, -98%);
+$body-font-color: $medium-grey;
+$body-font-family: $serif-typeface-1;
 $body-antialiased: true;
 $global-margin: $space-m;
 $global-padding: $space-m;
@@ -107,7 +107,7 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
+  medium: 768px,
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
@@ -131,13 +131,13 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: ; // Specified in theme as it varies
-$header-font-weight: ; // Specified in theme as it varies
+$header-font-family: $sans-serif-typeface-2; // Specified in theme as it varies
+$header-font-weight: $regular; // Specified in theme as it varies
 $header-font-style: normal;
 $font-family-monospace: $fixed-typeface-1;
-$header-color: inherit;
-$header-lineheight: 1.4;
-$header-margin-bottom: 0.5rem;
+$header-color: $dark-grey;
+$header-lineheight: 1em;
+$header-margin-bottom: 1em;
 $header-styles: (
   small: (
     'h1': ('font-size': 24),
@@ -159,8 +159,8 @@ $header-styles: (
 $header-text-rendering: optimizeLegibility;
 $small-font-size: 80%;
 $header-small-font-color: $medium-gray;
-$paragraph-lineheight: 1.6;
-$paragraph-margin-bottom: 1rem;
+$paragraph-lineheight: 1.5em;
+$paragraph-margin-bottom: 1em;
 $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
@@ -169,7 +169,7 @@ $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $primary-color;
-$anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
+$anchor-color-hover: $blue;
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
 $hr-width: $global-width;
@@ -287,11 +287,11 @@ $button-background: $primary-color;
 $button-background-hover: scale-color($button-background, $lightness: -15%);
 $button-color: $white;
 $button-color-alt: $black;
-$button-radius: $global-radius;
+$button-radius: $button-radius;
 $button-hollow-border-width: 1px;
 $button-sizes: (
   tiny: 0.6rem,
-  small: 0.75rem,
+  small: rem-calc(14),
   default: 0.9rem,
   large: 1.25rem,
 );
@@ -860,8 +860,8 @@ $xy-grid: true;
 $grid-container: $global-width;
 $grid-columns: 12;
 $grid-margin-gutters: (
-  small: 20px,
-  medium: 30px
+  small: 40px,
+  medium: 60px
 );
 $grid-padding-gutters: $grid-margin-gutters;
 $grid-container-padding: $grid-padding-gutters;
