--- a/src/assets/scss/themes/helenliu-2018/components/_header-panel.scss
+++ b/src/assets/scss/themes/helenliu-2018/components/_header-panel.scss
@@ -10,10 +10,9 @@
 // ====================================================================
 
 .header--panel {
+	position: relative;
 	padding: $global-padding;
-	background: {
-		image: url('../img/bg-img-stripe.png');
-	}
+	text-align: center;
 }
 
 .header--panel--header {
@@ -26,17 +25,31 @@
 		size: 5vw;
 		weight: $bold;
 	}
-	line-height: 5vw;
+
+	@include breakpoint(medium down) {
+		font: {
+			size: 6vw;
+		}
+	}
+
+	@include breakpoint(small down) {
+		font: {
+			size: 12vw;
+		}
+	}
 
 	// Sub-title
 	span {
-		display: block;
 		font: {
-			size: 2.5vw;
 			weight: $regular;
 		}
-		line-height: 3vw;
-		color: $medium-grey;
+		@include breakpoint(small down) {
+			display: block;
+			font: {
+				size: 9vw;
+			}
+			color: $medium-grey;
+		}
 	}
 }
 
@@ -44,8 +57,26 @@
 	* {
 		font: {
 			family: $serif-typeface-1;
-			size: 1.3vw;
+			size: 1.7vw;
 			weight: $regular;
+		}
+
+		@include breakpoint(large down) {
+			font: {
+				size: 2vw;
+			}
+		}
+
+		@include breakpoint(medium down) {
+			font: {
+				size: 2.5vw;
+			}
+		}
+
+		@include breakpoint(small down) {
+			font: {
+				size: 4.5vw;
+			}
 		}
 	}
 }
