--- a/src/assets/scss/themes/helenliu-2018/_settings.scss
+++ b/src/assets/scss/themes/helenliu-2018/_settings.scss
@@ -107,6 +107,7 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
+  smed: 420px,
   medium: 768px,
   large: 1024px,
   xlarge: 1200px,
@@ -115,7 +116,7 @@ $breakpoints: (
   cinema: 2048px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large xlarge xxlarge xxxlarge cinema);
+$breakpoint-classes: (small smed medium large xlarge xxlarge xxxlarge cinema);
 
 // 3. The Grid
 // -----------
@@ -141,22 +142,22 @@ $header-color: $dark-grey;
 $header-lineheight: 1em;
 $header-margin-bottom: 1em;
 $header-styles: (
-  small: (
-    'h1': ('font-size': 24),
-    'h2': ('font-size': 20),
-    'h3': ('font-size': 19),
-    'h4': ('font-size': 18),
-    'h5': ('font-size': 17),
-    'h6': ('font-size': 16),
-  ),
-  medium: (
-    'h1': ('font-size': 48),
-    'h2': ('font-size': 40),
-    'h3': ('font-size': 31),
-    'h4': ('font-size': 25),
-    'h5': ('font-size': 20),
-    'h6': ('font-size': 16),
-  ),
+  // small: (
+  //   'h1': ('font-size': 24),
+  //   'h2': ('font-size': 20),
+  //   'h3': ('font-size': 19),
+  //   'h4': ('font-size': 18),
+  //   'h5': ('font-size': 17),
+  //   'h6': ('font-size': 16),
+  // ),
+  // medium: (
+  //   'h1': ('font-size': 48),
+  //   'h2': ('font-size': 40),
+  //   'h3': ('font-size': 31),
+  //   'h4': ('font-size': 25),
+  //   'h5': ('font-size': 20),
+  //   'h6': ('font-size': 16),
+  // ),
 );
 $header-text-rendering: optimizeLegibility;
 $small-font-size: 80%;
