--- a/src/assets/scss/themes/helenliu-2018/components/_blade-panel.scss
+++ b/src/assets/scss/themes/helenliu-2018/components/_blade-panel.scss
@@ -44,20 +44,20 @@
 }
 
 .blade-panel--title {
-	font: {
-		size: rem-calc(40);
-	}
+// 	font: {
+// 		size: rem-calc(40);
+// 	}
 	
 	@include breakpoint(medium down) { // 320
-		font: {
-			size: rem-calc(32);
-		}
+		// font: {
+		// 	size: rem-calc(32);
+		// }
 	}
 
 	@include breakpoint(small down) { // 320
-		font: {
-			size: rem-calc(30);
-		}
+		// font: {
+		// 	size: rem-calc(30);
+		// }
 	}
 
 	span {
@@ -66,20 +66,23 @@
 			top: rem-calc($space-xs);
 		}
 		font: {
-			size: rem-calc(28);
+			size: 0.7em;
 		}
+		// font: {
+		// 	size: rem-calc(28);
+		// }
 		color: $medium-grey;
 
 		@include breakpoint(medium down) { // 320
-			font: {
-				size: rem-calc(20);
-			}
+			// font: {
+			// 	size: rem-calc(20);
+			// }
 		}
 
 		@include breakpoint(small down) { // 320
-			font: {
-				size: rem-calc(20);
-			}
+			// font: {
+			// 	size: rem-calc(20);
+			// }
 		}
 	}
 }
