--- a/src/assets/scss/themes/helenliu-2018/components/_featurettes-panel.scss
+++ b/src/assets/scss/themes/helenliu-2018/components/_featurettes-panel.scss
@@ -11,21 +11,23 @@
 
 .featurettes-panel {
 	position: relative;
-	// border-bottom: $border-panel;
 }
 
 .featurettes-panel--item {
-	padding: rem-calc($space-xl);
-	padding-left: 0;
-	// text-align: center;
-
-	@include breakpoint(large down) { // 1024
-		padding: rem-calc($space-xl);
-		padding-left: 0;
+	padding: {
+		top: rem-calc($space-l);
+		bottom: rem-calc($space-l);
 	}
 
-	@include breakpoint(smed down) { // 420
-		padding: 0;
+	@include breakpoint(large down) { // 320
+		padding: {
+			top: rem-calc($space-m);
+			bottom: rem-calc($space-m);
+		}
+	}
+
+	@include breakpoint(small down) { // 320
+		// padding: 0;
 	}
 }
 
@@ -38,43 +40,55 @@
 
 .featurettes-panel--title {
 	font: {
-		family: $sans-serif-typeface-2;
-		size: 2vw; //rem-calc(34);
+		// family: $sans-serif-typeface-2;
+		// size: 2.2vw; //rem-calc(34);
 		weight: $regular;
 	}
-	line-height: 1.2em;
+	// line-height: 1.2em;
+	// margin-bottom: 0.2em;
 	text-align: center;
 
-	@include breakpoint(medium down) { // 768
-		font: {
-			size: 5vw; //rem-calc(24);
-		}
+	@include breakpoint(large down) { // 768
+		// font: {
+		// 	size: rem-calc(24);
+		// }
 	}
 
-	@include breakpoint(smed down) { // 768
-		font: {
-			size: 8vw; //rem-calc(24);
-		}
+	@include breakpoint(small down) { // 768
+		// font: {
+		// 	size: 8vw; //rem-calc(24);
+		// }
 	}
 }
 
 .featurettes-panel--content {
 
-	* {
+	> * {
+		@include breakpoint(medium) {
+			font: {
+				size: 85%;
+			}
+		}
 		// font: {
-		// 	size: 0.9vw; //rem-calc(16);
+		// 	size: 1vw; //rem-calc(16);
 		// 	weight: $regular;
 		// }
 
-		// @include breakpoint(xlarge) { // 1024
+		// @include breakpoint(xxxlarge down) { // 1024
 		// 	font: {
-		// 		size: 0.9vw; //rem-calc(16);
+		// 		size: 1.1vw; //rem-calc(16);
+		// 	}
+		// }
+
+		// @include breakpoint(large down) { // 1024
+		// 	font: {
+		// 		size: rem-calc(13);
 		// 	}
 		// }
 
 		// @include breakpoint(medium down) { // 768
 		// 	font: {
-		// 		size: 4vw; //rem-calc(13);
+		// 		size: rem-calc(14);
 		// 	}
 		// }
 	}
